pk: Use appstream information to launch an app

We no longer need to do weird package introspection to find the
executable.

BUG: 449108